fixes jumbotron so that it adds a bottom black border properly. Fixes Results button in analyze page. Fixes other layout issues in analyze including uniform button look. Fixes /page/software to look right.

--- a/css/monarch-specific.css
+++ b/css/monarch-specific.css
@@ -46,6 +46,7 @@
     z-index: 10;
 }
 .monarch-container .tab {
+    line-height: 30px;
     display: inline-block;
     padding: 2px 12px;
     text-align: center;
@@ -358,10 +359,10 @@
 	margin: 0 5px 1px 0;
 }
 .monarch-container #analyze-submit{
-	margin: 5px 0 10px 0;
+  min-width:70px;
 }
 .monarch-container #reset{
-    padding: 5px 18px 5px 18px;
+  min-width:70px;
 }
 .monarch-container #upload-reset{
     margin: 0 0 1px 5px;
